Included index show for users and posts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,48 @@
  *= require_tree .
  *= require_self
  */
+ #singleUser{
+    display: flex;
+ }
+
+ #singleUser > img{
+    border:1px solid black;
+    height:60px;
+    width: 60px;
+    margin: 2px;
+ }
+ #userInfo{
+    border:1px solid black; 
+    display: flex;
+    height:60px;
+    width: 250px;
+    margin: 2px;
+    align-items: center;
+    justify-content: space-around;
+ }
+
+ #singlePost{
+   border:1px solid black; 
+   display: flex;
+   flex-direction: column;
+   height:auto;
+   width: 308px;
+   padding: 5px;
+ }
+
+.post_title{
+margin: 5px 0px;
+text-align: left;
+}
+.counters{
+text-align: right;
+}
+
+#userTemplate{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+button{
+   margin-top: 20px
+}
