Revert "Included index show for users and posts"
This reverts commit 1bbb68cbf6fbbfeea533ac995b3f16ec802545cd.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,1 @@
-<h1>Users</h1>
-
-<div id="users">
-  <% @users.each do |user| %>
-    <%= render partial: "shared/single_user", locals: { user: user } %>
-  <% end %>
-</div>
-
+<h1>Here is a List of Users</h1>
