--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,1 @@
-<div id="postTemplate">
-   <%= render partial: "shared/single_user", locals: { user: @user } %>
-<% @user.posts.each do |post| %>
-     <%= render partial: "shared/single_post", locals: { post: post } %>
-     <% post.comments.each do |comment| %>
-         <label><%= comment.text%></label>
-     <% end %>
-<% end %>
-<%= button_to "See all posts"%>
- </div>
+<h1>Here is a list of posts for a given user</h1>
