--- a/app/views/shared/_single_user.html.erb
+++ b/app/views/shared/_single_user.html.erb
@@ -1,5 +1,5 @@
 <div id="singleUser">
-      <img src="<%= user.photo%>" />
+      <img src="<%= user.photo%>" alt="photo"/>
       <div id="userInfo">
         <h3><%= user.name %></h3>
         <label >Number of posts: <%= user.post_counter %><label/>
