--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <div id="userTemplate">
    <%= render partial: "shared/single_user", locals: { user: @user } %>
+   <div id="bio">
+   <p><%= @user.bio %></p>
+   </div>
 <% @user.posts.each do |post| %>
      <%= render partial: "shared/single_post", locals: { post: post } %>
 <% end %>
