--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
    <%= render partial: "shared/single_user", locals: { user: @user } %>
 <% @user.posts.each do |post| %>
      <%= render partial: "shared/single_post", locals: { post: post } %>   
-     
+     <%= render partial: "shared/collection_comments", locals: { post: post, user: @user } %>    
 <% end %>
 <%= button_to "Pagination"%>
  </div>
