--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,14 @@
 <div id="postTemplate">
     <div id="singlePost">
         <div id="postHeader">
-                <h3 class="post_title">Post # <%= @post.id %> by <%= @post.id %> </h3>
+                <h3 class="post_title">Post # <%= @post.id %> by <%= @user.name %> </h3>
                 <label class="counters">Comments:<%= @post.comments_counter %> Likes:<%= @post.likes_counter %> </label>
         </div>  
         <p><%= @post.text %></p>
     </div>
-    <%= render partial: "shared/collection_comments", locals: { post: @post, user: @user } %>    
+    <div id="commentsSection">
+                <% @comments.each do |comment| %>
+                <%= render partial: "shared/single_comment", locals: { comment: comment } %>
+                <% end %>
+     </div>
 </div>
