--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,19 +64,23 @@
 .counters {
   text-align: right;
 }
-
+#newPostTemplate,
 #userTemplate,
 #postTemplate {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 326px;
 }
 
 button {
   margin-top: 20px;
 }
 
-#loginForm {
+#newPostTemplate form, #loginForm {
   display: flex;
   flex-direction: column;
   align-items: center;
