--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,16 +6,10 @@
         </div>  
         <p><%= @post.text %></p>
     </div>
-    <div id="formComment" >
-        <%= form_with model: Comment.new, url: { action: "createcomment" } , method: :post do |f| %>
-        <%= f.label :text %><br>
-        <%= f.text_field :text %><br>
-        <%= f.submit "Create Comment" %>
-        <% end %>  
-   </div>
     <div id="commentsSection">
                 <% @comments.each do |comment| %>
                 <%= render partial: "shared/single_comment", locals: { comment: comment } %>
                 <% end %>
      </div>
+     <%= button_to "Add like", { action: "create", controller: "likes"},  method:'post' %>
 </div>
