--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
 <div id="postTemplate">
-   <%= render partial: "shared/single_user", locals: { user: @user } %>
+   <%= render partial: "shared/single_user", locals: { user: @user} %>
 <% @posts.each do |post| %>
-     <%= render partial: "shared/single_post", locals: { post: post } %>   
+     <%= render partial: "shared/single_post", locals: { user: @user, post: post } %>   
      <%= render partial: "shared/collection_comments", locals: { post: post, user: @user } %>    
 <% end %>
 <%= button_to "Pagination"%>
  </div>
 
 
-     
+   
