--- a/app/views/homexxx/index.html.erb
+++ b/app/views/homexxx/index.html.erb
@@ -1,4 +1,4 @@
-<form id="loginForm" action="/login" method="get" accept-charset="UTF-8" >
+<form id="loginForm" action="/login" method="get"  >
   <input id="username" name="username" type="text" placeholder="Username" />
   <input id="password" name="password" type="password" placeholder="Password" />
   <input name="logIn" type="submit" value="Log in" />
