--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,7 +64,7 @@
 .counters {
   text-align: right;
 }
-
+.app_body,
 #newCommentsTemplate,
 #newPostTemplate,
 #userTemplate,
@@ -91,9 +91,9 @@ button {
   margin-top: 50px;
 }
 
-input[type='text'] {
+/* input[type='text'] {
   margin: 20px;
-}
+} */
 
 input[type='submit'] {
   margin: 30px;
@@ -102,4 +102,8 @@ input[type='submit'] {
 #buttons {
   display: flex;
   justify-content: space-between;
+}
+.sign{
+  margin-left: auto;
+  margin-right: 5px;
 }
